global overflow fixed

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,10 @@
-@use './assets/styles/variables' as *;
+@use "./assets/styles/variables" as *;
 
-
-body {
-    background-color: $color3;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+body,
+html {
+  background-color: $color3;
+  width: 100%;
+  overflow-x: hidden; // Prevents horizontal scrolling
+  margin: 0;
+  padding: 0;
 }
